import "google/protobuf/descriptor.proto";

package geo_base.proto;

extend google.protobuf.EnumValueOptions {
    optional string SQL = 5000;
}

message location_t {
	required double lon = 1;
	required double lat = 2;
}

message polygon_t {
    enum type_t {
        TYPE_INNER = 1 [(SQL) = "inner"];
        TYPE_OUTER = 2 [(SQL) = "outer"];
    };

	required uint64 polygon_id = 1;
	repeated location_t locations = 2;
	required type_t type = 3;
}

message kv_t {
	required string k = 1;
	required string v = 2;
}

message geo_data_t {
	required uint64 region_id = 1;
	optional uint64 parent_id = 2;
	repeated polygon_t polygons = 3;
	repeated kv_t kvs = 4;
	repeated string blobs = 5;
}
